<resources>
    <string name="app_name">UserProfile</string>
    <string name="user_photo">User Photo</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="sex">Sex</string>
    <string name="notifications">Receive notifications</string>
    <string name="first_checkbox">About authorization on the device</string>
    <string name="second_checkbox">About new products and offers</string>
    <string name="points">Points</string>
    <string name="save">Save</string>
</resources>